fixed spacing and margin

--- a/styles.css
+++ b/styles.css
@@ -1,49 +1,53 @@
+body {
+    margin-left: 50px;
+}
+
 h1, h2, h3, h4, h5, h6 {
-	margin-bottom:18px;
-	font-family:"Oswald", sans-serif;
-	font-weight:300;
-	line-height:1.62em;
-	letter-spacing:1px;
+    margin-bottom: 18px;
+    font-family: "Oswald", sans-serif;
+    font-weight: 300;
+    line-height: 1.62em;
+    letter-spacing: 1px;
 }
 
 h1 {
-	font-size:36px;
+    font-size: 36px;
 }
 
 h2 {
-    font-size:32px;
+    font-size: 32px;
     text-align: center;
     width: 600px;
 }
 
 h3 {
-	font-size:24px;
+    font-size: 24px;
 }
 
 h4 {
-	font-size:18px;
+    font-size: 18px;
 }
 
 h5 {
-	font-size:16px;
+    font-size: 16px;
 }
 
 h6 {
-	font-size:15px;
+    font-size: 15px;
 }
 
 p {
-	color: #333;
-	font-family: "Open Sans", sans-serif;
-	font-size: 16px;
-	line-height: 1.62em;
+    color: #333;
+    font-family: "Open Sans", sans-serif;
+    font-size: 16px;
+    line-height: 1.62em;
     width: 600px;
-	text-align: justify;
+    text-align: justify;
 }
 
 div {
     float: left;
-    font-family:"Open Sans", sans-serif;
+    font-family: "Open Sans", sans-serif;
     /*text-align: center;*/
 }
 
@@ -55,29 +59,30 @@ hr {
 
 figcaption {
     margin: 15px auto 0 0;
-	display: block;
-	font-size: small;
-	font-family:"Open Sans", sans-serif;
+    display: block;
+    font-size: small;
+    font-family: "Open Sans", sans-serif;
     /*font-family: Arial;*/
     color: #222222;
-	text-align: left;
-	width: 600px;
+    text-align: left;
+    width: 600px;
 }
+
 figure {
     padding: 5px;
-	width: 600px;
+    width: 600px;
 }
 
 img {
     height: 184px;
     margin-top: -1em;
     margin-bottom: -1em;
-	text-align: center;
+    text-align: center;
 }
 
 code {
-	background-color: #eee;
-	padding: 2px;
+    background-color: #eee;
+    padding: 2px;
     /*width: 100%;*/
     text-align: center;
 }
@@ -87,10 +92,10 @@ code {
 }
 
 #rhythms {
-	/*height: 73px;*/
-	/*width: 538px;*/
-	height: 100px;
-	width: 550px;
+    /*height: 73px;*/
+    /*width: 538px;*/
+    height: 100px;
+    width: 550px;
 }
 
 #divider {
@@ -99,7 +104,7 @@ code {
 }
 
 #display {
-    color:#333;
+    color: #333;
     font-family: Arial;
     font-size: 40px;
     /*text-align: center;*/
@@ -108,14 +113,14 @@ code {
 }
 
 #displayrhythm {
-    color:#333;
+    color: #333;
     font-family: Arial;
     font-size: 40px;
     margin-right: 5px;
 }
 
 #M3_ji {
-	margin-left: 5px;
+    margin-left: 5px;
 }
 
 #rhythmratios {
@@ -127,7 +132,7 @@ code {
 }
 
 #tempo, #temponested, #multislider {
-        margin-left: 25px;
+    margin-left: 25px;
 }
 
 .blink {
@@ -138,7 +143,7 @@ code {
 }
 
 .mutes {
-	/*margin: 10px;*/
-	text-align: center;
-	width: 100px;
+    /*margin: 10px;*/
+    text-align: center;
+    width: 100px;
 }
